@@ -29,6 +29,14 @@ public final class ImageNodeStyle implements INodeStyle {
 
     private int scalingFactor;
 
+    private String borderColor;
+
+    private int borderSize;
+
+    private int borderRadius;
+
+    private LineStyle borderStyle;
+
     private ImageNodeStyle() {
         // Prevent instantiation
     }
@@ -41,14 +49,30 @@ public final class ImageNodeStyle implements INodeStyle {
         return this.scalingFactor;
     }
 
+    public String getBorderColor() {
+        return this.borderColor;
+    }
+
+    public int getBorderSize() {
+        return this.borderSize;
+    }
+
+    public int getBorderRadius() {
+        return this.borderRadius;
+    }
+
+    public LineStyle getBorderStyle() {
+        return this.borderStyle;
+    }
+
     public static Builder newImageNodeStyle() {
         return new Builder();
     }
 
     @Override
     public String toString() {
-        String pattern = "{0} '{'imageURL: {1}'}'"; //$NON-NLS-1$
-        return MessageFormat.format(pattern, this.getClass().getSimpleName(), this.imageURL);
+        String pattern = "{0} '{'imageURL: {1}', border: '{' size: {2}, color: {3}, style: {4} '}'}'"; //$NON-NLS-1$
+        return MessageFormat.format(pattern, this.getClass().getSimpleName(), this.imageURL, this.borderSize, this.borderColor, this.borderStyle);
     }
 
     /**
@@ -61,6 +85,14 @@ public final class ImageNodeStyle implements INodeStyle {
         private String imageURL;
 
         private int scalingFactor;
+
+        private String borderColor = "black"; //$NON-NLS-1$
+
+        private int borderSize;
+
+        private int borderRadius;
+
+        private LineStyle borderStyle = LineStyle.Solid;
 
         private Builder() {
             // Prevent instantiation
@@ -76,10 +108,34 @@ public final class ImageNodeStyle implements INodeStyle {
             return this;
         }
 
+        public Builder borderColor(String borderColor) {
+            this.borderColor = Objects.requireNonNull(borderColor);
+            return this;
+        }
+
+        public Builder borderSize(int borderSize) {
+            this.borderSize = borderSize;
+            return this;
+        }
+
+        public Builder borderRadius(int borderRadius) {
+            this.borderRadius = borderRadius;
+            return this;
+        }
+
+        public Builder borderStyle(LineStyle borderStyle) {
+            this.borderStyle = Objects.requireNonNull(borderStyle);
+            return this;
+        }
+
         public ImageNodeStyle build() {
             ImageNodeStyle style = new ImageNodeStyle();
             style.imageURL = Objects.requireNonNull(this.imageURL);
             style.scalingFactor = Objects.requireNonNull(this.scalingFactor);
+            style.borderColor = Objects.requireNonNull(this.borderColor);
+            style.borderSize = this.borderSize;
+            style.borderRadius = this.borderRadius;
+            style.borderStyle = Objects.requireNonNull(this.borderStyle);
             return style;
         }
     }
