@@ -23,8 +23,11 @@ export class ImageView extends RectangularNodeView {
   // @ts-ignore
   render(node, context) {
     const { selected, hoverFeedback, bounds, style } = node;
-
-    const styleObject = {};
+    const styleObject = {
+      fill: 'none',
+      stroke: style.borderSize > 0 ? style.borderColor : 'none',
+      'stroke-width': style.borderSize,
+    };
 
     if (node.selected) {
       styleObject['outline'] = 'var(--blue-lagoon) solid 1px';
@@ -33,29 +36,58 @@ export class ImageView extends RectangularNodeView {
     if (node.hoverFeedback) {
       styleObject['outline'] = 'var(--blue-lagoon) solid 2px';
     }
-    const size = {
+
+    switch (style.borderStyle) {
+      case 'Dash':
+        styleObject['stroke-dasharray'] = '4,4';
+        break;
+      case 'Dot':
+        styleObject['stroke-dasharray'] = '2,2';
+        break;
+      case 'Dash_Dot':
+        styleObject['stroke-dasharray'] = '2,4,2';
+        break;
+      default:
+        break;
+    }
+
+    const imageSize = {
+      width: Math.max(0, bounds.width),
+      height: Math.max(0, bounds.height),
+    };
+    const rectangleSize = {
       width: Math.max(0, bounds.width),
       height: Math.max(0, bounds.height),
     };
 
+    let rectanglePosition = { x: 0, y: 0 };
+    // Adapt the size and position to show the full width of the border
+    if (style.borderSize && style.borderSize > 0) {
+      rectangleSize.width += style.borderSize;
+      rectangleSize.height += style.borderSize;
+      rectanglePosition.x -= style.borderSize / 2;
+      rectanglePosition.y -= style.borderSize / 2;
+    }
     const selectedHandles = createResizeHandles(node);
 
     return (
       <g
         attrs-data-testid={`Image - ${node.children[0]?.text}`}
+        attrs-data-testselected={`${node.selected}`}
         attrs-data-nodeid={node.id}
         attrs-data-descriptionid={node.descriptionId}
       >
-        <image
+        <rect
           class-selected={selected}
           class-mouseover={hoverFeedback}
-          x={0}
-          y={0}
-          width={size.width}
-          height={size.height}
-          href={style.imageURL}
+          x={rectanglePosition.x}
+          y={rectanglePosition.y}
+          rx={style.borderRadius}
+          width={rectangleSize.width}
+          height={rectangleSize.height}
           style={styleObject}
         />
+        <image x={0} y={0} width={imageSize.width} height={imageSize.height} href={style.imageURL} />
         {selectedHandles}
         {context.renderChildren(node)}
       </g>
